<resources>
    <string name="app_name">DeliveryPE Drivers</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_new_orders">Nuevos</string>
    <string name="taken_transportation_orders">En Progreso</string>
    <string name="title_history">Historial</string>
    <string name="customer_name_label_new_transp">Cliente:</string>
    <string name="establishment_name_label_new_transp">Establecimiento:</string>
    <string name="delivery_site_label_new_transp">Dirección:</string>
    <string name="customer_phones_label_new_transp">Teléfonos:</string>
    <string name="total_price_label_new_transp">Total:</string>
    <string name="history_transportation_orders">Historial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label_loading">Cargando...</string>


    <string name="error_failure_none">Algo inesperado sucedió. Contacta a soporte.</string>
    <string name="error_failure_network_connection_lost_suddenly">La conexión a internet se perdió repentinamente.</string>
    <string name="error_failure_no_network_detected">No hay conexión a internet. Inténtalo de nuevo más tarde.</string>
    <string name="error_failure_ssl">Error de SSL.</string>
    <string name="error_failure_time_out">Se agotó el tiempo de espera con el servidor.</string>
    <string name="error_general">Por favor, contacta a soporte.</string>
    <string name="UnauthorizedOrForbidden">No autorizado</string>
    <string name="server_error">Error interno del servidor</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Si</string>
    <string name="wantToTakeOrder">¿Está seguro que quiere tomar esta orden?</string>

</resources>